--- a/portfolio.html
+++ b/portfolio.html
@@ -179,7 +179,7 @@
     </main>
 
     <!--Футер-->
-    <footer>
+    <footer class="footer">
       <div class="container">
         <a href="./index.html" class="logo-footer"
           ><span class="accent">Web</span>Studio</a
