--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div>
         <section class="hero">
           <div class="container">
-            <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="hero-button">Заказать услугу</button>
           </div>
         </section>
@@ -58,29 +58,29 @@
         <div class="container">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="main-list list">
-            <li class="item">
-              <h3 class="section-work">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+            <li class="cards">
+              <h3 class="section-work">Внимание к деталям</h3>
               <p class="paragraf">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="item">
-              <h3 class="section-work">ПУНКТУАЛЬНОСТЬ</h3>
+            <li class="cards">
+              <h3 class="section-work">Пунктуальность</h3>
               <p class="paragraf">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="item">
-              <h3 class="section-work">ПЛАНИРОВАНИЕ</h3>
+            <li class="cards">
+              <h3 class="section-work">Планирование</h3>
               <p class="paragraf">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="item">
-              <h3 class="section-work">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+            <li class="cards">
+              <h3 class="section-work">Современные технологии</h3>
               <p class="paragraf">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
@@ -135,8 +135,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-names">Игорь Демьяненко</h3>
-              <p lang="en" class="position">Product Designer</p>
+              <div class="team-text">
+                <h3 class="team-names">Игорь Демьяненко</h3>
+                <p lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="cards">
               <img
@@ -145,8 +147,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-names">Ольга Репина</h3>
-              <p lang="en" class="position">Frontend Developer</p>
+              <div class="team-text">
+                <h3 class="team-names">Ольга Репина</h3>
+                <p lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="cards">
               <img
@@ -155,8 +159,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-names">Николай Тарасов</h3>
-              <p lang="en" class="position">Marketing</p>
+              <div class="team-text">
+                <h3 class="team-names">Николай Тарасов</h3>
+                <p lang="en">Marketing</p>
+              </div>
             </li>
             <li class="cards">
               <img
@@ -165,8 +171,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-names">Михаил Ермаков</h3>
-              <p lang="en" class="position">UI Designer</p>
+              <div class="team-text">
+                <h3 class="team-names">Михаил Ермаков</h3>
+                <p lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -174,7 +182,7 @@
     </main>
 
     <!--Футер-->
-    <footer>
+    <footer class="footer">
       <div class="container">
         <a href="./index.html" class="logo-footer"
           ><span class="accent">Web</span>Studio</a
